# d3d9-ffi

./: Cargo.toml  build.rs
src/: d3dx9_ffi.rs  lib.rs
